--- a/.travis.yml
+++ b/.travis.yml
@@ -24,10 +24,15 @@ matrix:
         - name: "PHP 7.3 Rest Functional Tests"
           php: 7.3
           env:
-            - REST_TEST_CONFIG="phpunit-integration-rest.xml" TEST_CMD="./bin/.travis/run_rest_tests.sh"
+            - TEST_CMD="./bin/.travis/run_rest_tests.sh"
             - APP_DEBUG=1
             - SYMFONY_CMD="ez:behat:create-language 'pol-PL' 'Polish (polski)'"
             - PHP_IMAGE=ezsystems/php:7.3-v1
+        - name: "PHP 7.3 Symfony Cache tests"
+          php: 7.3
+          env:
+            - TEST_CMD="bin/ezbehat --profile=httpCache --suite=symfonycache"
+            - APP_DEBUG=1
 
 # test only master + stable (+ Pull requests)
 branches:
@@ -45,7 +50,7 @@ before_script:
 
 script:
     - if [ "$TEST_CMD" = "" ] && [ "$CHECK_CS" != "true" ] ; then php vendor/bin/phpunit --coverage-text && php vendor/bin/phpspec run --format=pretty ; fi
-    - if [ "$REST_TEST_CONFIG" != "" ] ; then cd "$HOME/build/ezplatform"; docker-compose exec --user www-data app sh -c "$TEST_CMD"  ; fi
+    - if [ "$TEST_CMD" != "" ] ; then cd "$HOME/build/ezplatform"; docker-compose exec --user www-data app sh -c "$TEST_CMD"  ; fi
     - if [ "$CHECK_CS" = "true" ]; then phpenv config-rm xdebug.ini && ./vendor/bin/php-cs-fixer fix -v --dry-run --diff --show-progress=estimating; fi
 
 notifications:
