EZP-30934: Removed usage of deprecated getCurrentUser method

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -61,7 +61,10 @@ services:
 
     ezplatform.http_cache.user_context_provider.role_identify:
         class: EzSystems\PlatformHttpCacheBundle\ContextProvider\RoleIdentify
-        arguments: ["@ezpublish.api.repository"]
+        arguments:
+            - '@ezpublish.api.repository'
+            - '@eZ\Publish\API\Repository\PermissionResolver'
+            - '@ezpublish.api.service.user'
         tags:
             - { name: fos_http_cache.user_context_provider }
 
