--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,9 @@
         }
     ],
     "require": {
-        "ezsystems/ezpublish-kernel": "^6.13.4@dev || ^7.3@dev",
+        "ezsystems/ezpublish-kernel": "^6.13.4 || ^7.3",
         "friendsofsymfony/http-cache-bundle": "^1.3.13",
+        "friendsofsymfony/http-cache": "^1.4.5",
         "symfony/symfony": "^2.8.40 || ^3.4.11"
     },
     "require-dev": {
