--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require": {
         "ezsystems/ezpublish-kernel": "^6.13.4@dev || ^7.3@dev",
         "friendsofsymfony/http-cache-bundle": "^1.3.13",
+        "friendsofsymfony/http-cache": "^1.4.5",
         "symfony/symfony": "^2.8.40 || ^3.4.11"
     },
     "require-dev": {
