--- a/composer.json
+++ b/composer.json
@@ -10,18 +10,18 @@
         }
     ],
     "require": {
-        "ezsystems/ezpublish-kernel": "^6.13.4@dev || ^7.5@dev",
-        "friendsofsymfony/http-cache-bundle": "^1.3.13",
+        "ezsystems/ezpublish-kernel": "^7.5@dev",
+        "friendsofsymfony/http-cache-bundle": "^1.3.16",
         "friendsofsymfony/http-cache": "^1.4.5",
-        "symfony/symfony": "^2.8.40 || ^3.4.11"
+        "symfony/symfony": "^3.4.37"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7.27 || ^6.5.13",
-        "matthiasnoback/symfony-dependency-injection-test": "^1.2.0 || ^2.3.1",
-        "phpspec/phpspec": "^3.4.3 || ^4.3.2",
+        "phpunit/phpunit": "^6.5.14 || ^7.5.20",
+        "matthiasnoback/symfony-dependency-injection-test": "^2.3.1",
+        "phpspec/phpspec": "^5.1.2",
         "ezsystems/ezplatform-code-style": "^0.1.0",
-        "friendsofphp/php-cs-fixer": "^2.16.0",
-        "memio/spec-gen": "^0.6.2 || ^0.8.5"
+        "friendsofphp/php-cs-fixer": "^2.16.1",
+        "memio/spec-gen": "^0.9.0"
     },
     "autoload": {
         "psr-4": {
