--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
     "extra": {
         "_ezplatform_branch_for_behat_tests": "2.5",
         "branch-alias": {
-            "dev-master": "1.0.x-dev",
+            "dev-1.0": "1.0.x-dev",
+            "dev-master": "2.0.x-dev",
             "dev-tmp_ci_branch": "1.0.x-dev"
         }
     }
