--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -2,6 +2,7 @@ parameters:
     ezplatform.http_cache.controller.invalidatetoken.class: EzSystems\PlatformHttpCacheBundle\Controller\InvalidateTokenController
     ezplatform.http_cache.listener.vary_header.class: EzSystems\PlatformHttpCacheBundle\EventListener\ConditionallyRemoveVaryHeaderListener
     ezplatform.http_cache.tags.header_max_length: null
+    ezplatform.http_cache.tags.header_reduced_ttl: null
 
 services:
     ezplatform.http_cache.cache_manager:
@@ -53,6 +54,7 @@ services:
          - '@ezplatform.http_cache.repository_tag_prefix'
          - '@logger'
          - '%ezplatform.http_cache.tags.header_max_length%'
+         - '%ezplatform.http_cache.tags.header_reduced_ttl%'
 
     ezplatform.http_cache.user_context_provider.role_identify:
         class: EzSystems\PlatformHttpCacheBundle\ContextProvider\RoleIdentify
