--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "ezsystems/ezpublish-kernel": "^7.5@dev",
+        "ezsystems/ezpublish-kernel": "^7.5",
         "friendsofsymfony/http-cache-bundle": "^1.3.16",
         "friendsofsymfony/http-cache": "^1.4.5",
         "symfony/symfony": "^3.4.37"
