--- a/composer.json
+++ b/composer.json
@@ -9,32 +9,40 @@
             "email": "dev-team@ez.no"
         }
     ],
-    "require": {
-        "ezsystems/ezpublish-kernel": "^8.0@dev",
-        "ezsystems/ezplatform-rest": "^1.0@dev",
-        "friendsofsymfony/http-cache-bundle": "^2.6.1",
-        "friendsofsymfony/http-cache": "^2.5.2",
-        "symfony/http-foundation": "^4.3",
-        "symfony/http-kernel": "^4.3",
-        "symfony/dependency-injection": "^4.3",
-        "symfony/event-dispatcher": "^4.3",
-        "symfony/routing": "^4.3",
-        "symfony/yaml": "^4.3",
-        "symfony/config": "^4.3",
-        "psr/http-client": "^1.0",
-        "php-http/curl-client": "^2.0",
-        "toflar/psr6-symfony-http-cache-store": "^2.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "~7.5.20",
-        "matthiasnoback/symfony-dependency-injection-test": "^2.3.1",
-        "phpspec/phpspec": "^5.1.2",
-        "ezsystems/ezplatform-code-style": "^0.1.0",
-        "friendsofphp/php-cs-fixer": "^2.16.1",
-        "memio/spec-gen": "^0.9.0"
-    },
     "minimum-stability": "dev",
     "prefer-stable": true,
+    "repositories": [
+        {"type": "vcs", "url": "https://github.com/webhdx/spec-gen.git"},
+        {"type": "vcs", "url": "https://github.com/webhdx/memio.git"},
+        {"type": "vcs", "url": "https://github.com/webhdx/twig-template-engine.git"},
+        {"type": "vcs", "url": "https://github.com/webhdx/JMSTranslationBundle.git"},
+        {"type": "vcs", "url": "https://github.com/webhdx/Routing.git"}
+    ],
+    "require": {
+        "php": ">=7.3",
+        "ezsystems/ezpublish-kernel": "dev-symfony5 as 8.0.x-dev",
+        "ezsystems/ezplatform-rest": "dev-symfony5 as 1.0.x-dev",
+        "friendsofsymfony/http-cache-bundle": "^2.8",
+        "friendsofsymfony/http-cache": "^2.9",
+        "symfony/http-foundation": "^5.0",
+        "symfony/http-kernel": "^5.0",
+        "symfony/dependency-injection": "^5.0",
+        "symfony/event-dispatcher": "^5.0",
+        "symfony/routing": "^5.0",
+        "symfony/yaml": "^5.0",
+        "symfony/config": "^5.0",
+        "psr/http-client": "^1.0",
+        "php-http/curl-client": "^2.1",
+        "toflar/psr6-symfony-http-cache-store": "^2.2"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.5",
+        "matthiasnoback/symfony-dependency-injection-test": "^4.1",
+        "phpspec/phpspec": "^6.1",
+        "ezsystems/ezplatform-code-style": "^0.1.0",
+        "friendsofphp/php-cs-fixer": "^2.16.0",
+        "memio/spec-gen": "dev-twig3 as 0.10"
+    },
     "autoload": {
         "psr-4": {
             "EzSystems\\PlatformHttpCacheBundle\\": "src",
