--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "repositories": [
-        {"type": "vcs", "url": "https://github.com/webhdx/spec-gen.git"},
-        {"type": "vcs", "url": "https://github.com/webhdx/memio.git"},
-        {"type": "vcs", "url": "https://github.com/webhdx/twig-template-engine.git"},
-        {"type": "vcs", "url": "https://github.com/webhdx/JMSTranslationBundle.git"},
-        {"type": "vcs", "url": "https://github.com/webhdx/Routing.git"}
+        {"type": "vcs", "url": "https://github.com/ezsystems/Routing.git"}
     ],
     "require": {
         "php": ">=7.3",
@@ -40,8 +36,7 @@
         "matthiasnoback/symfony-dependency-injection-test": "^4.1",
         "phpspec/phpspec": "^6.1",
         "ezsystems/ezplatform-code-style": "^0.1.0",
-        "friendsofphp/php-cs-fixer": "^2.16.0",
-        "memio/spec-gen": "dev-twig3 as 0.10"
+        "friendsofphp/php-cs-fixer": "^2.16.0"
     },
     "autoload": {
         "psr-4": {
