--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": ">=7.3",
-        "ezsystems/ezplatform-kernel": "~1.2.0@dev",
+        "ezsystems/ezplatform-kernel": "^1.3@dev",
         "ezsystems/ezplatform-rest": "^1.0@dev",
         "friendsofsymfony/http-cache-bundle": "^2.8",
         "friendsofsymfony/http-cache": "^2.9",
@@ -51,10 +51,10 @@
         ]
     },
     "extra": {
-        "_ezplatform_branch_for_behat_tests": "3.2",
+        "_ezplatform_branch_for_behat_tests": "master",
         "branch-alias": {
-            "dev-master": "2.2.x-dev",
-            "dev-tmp_ci_branch": "2.2.x-dev"
+            "dev-master": "2.3.x-dev",
+            "dev-tmp_ci_branch": "2.3.x-dev"
         }
     }
 }
